--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html{
+*{
   margin:0;
   scroll-behavior: smooth;
 }
@@ -8,55 +8,65 @@ body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.1em;
+  background-color: #FBFBFD;
+  opacity:.95;
+}
+ul{
+  padding:0;
+  margin-top:10%;
 }
 /* The sidebar menu */
 .sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 300px; /* Set the width of the sidebar */
+  width:300px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #111; /* Black */
+  /* opacity:.6; */
+  background-color:#367588;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 0px;
+  padding-top: 0;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.1em;
-}
-.sidenav img{
-  width:100%;
-  margin:0;
+  opacity: .95;
 }
 /* The navigation menu links */
 .sidenav a {
-  padding: 10px 8px 18px 16px;
+  padding: 5% 5% 5% 2%;
   margin:0 1em;
   text-decoration: none;
-  font-size: 2em;
+  font-size:3em;
   color: white;
   display: block;
 }
+.home{
+  height:100px;
+  margin:5% 0 10% 5%;
+}
 
+.sidenav a:nth-child(2){
+  padding:0 0 20% 0;
+}
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #eb9871;
 }
-.active {
-  color:#E87C4A;
+.sidenav li{
+  list-style-type: none;
 }
-
 #dove{
-  width:25%;
-  margin: 10% 0 0 38%;
+  width:2.75em;
+  margin: 5% 0 10% 2%;
   border-radius: 20em;
 }
 #tccLogo{
   margin:0 0 5% 0;
-  width:95%;
+  width:9em;
 }
-.menuLinks:last-child{
+/* .menuLinks:last-child{
   /* border-bottom: white solid 1px; */
-}
+/* }
 
 /* Style page content */
 #main {
@@ -69,24 +79,29 @@ body{
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-#header{
+#home{
   display:flex;
   flex-flow: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  background: url("cemetery-Arlingtoncemetery.jpg") no-repeat top left fixed;
+  background: url("sunny.jpg") no-repeat top left fixed;
   background-color: rgb(247, 134, 48);
   background-size: cover;
   height: 75em;
   margin:0;
+  color:#dddbda;
+  text-transform: uppercase;
+  text-shadow:rgb(37, 37, 37) 1px 2px 4px;
+  letter-spacing: 1em;
+  /* word-spacing: 0.01em; */
   opacity:0.9;
-  animation: fadeIn linear 3s;
+  /* animation: fadeIn linear 3s;
   -webkit-animation: fadeIn linear 3s;
   -moz-animation: fadeIn linear 3s;
   -o-animation: fadeIn linear 3s;
-  -ms-animation: fadeIn linear 3s;
+  -ms-animation: fadeIn linear 3s; */
 }
-@keyframes fadeIn {
+/* @keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
 }
@@ -109,6 +124,24 @@ body{
 @-ms-keyframes fadeIn {
   0% {opacity:0;}
   100% {opacity:1;}
+} */
+#home > h2{
+  margin-top:45%;
+  font: 4em 'Grape Nuts', sans-serif;
+  width:100%;
+  color:#dddbda;
+
+}
+#home > h1{
+  font: 5em 'Handlee', sans-serif;
+  letter-spacing: 0.15em;
+}
+#home > h1::first-letter{
+  color:#E87C4A
+}
+#home > img{
+  width:70%;
+  margin-top:15%;
 }
 #logo{
   width:6%;
@@ -131,66 +164,49 @@ body{
   margin-bottom: 16%;
   text-shadow: #0c0c0c 1px 2px;
 }
-#history{
+#history, #pricing, #rules, #committee, #contact{
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.heading{
-  width:30%;
-  margin-bottom:1%;
-}
-.heading > h3{
+h3{
   color:#E87C4A;
   font-size: 4em;
   text-align: center;
-  margin:20% 0 0 0;
+  margin:5% 0 0 0;
   text-transform: uppercase;
   letter-spacing: .05em;
+  width:40%;
 }
-.heading > h2{
+h2{
   color:rgb(233, 231, 231);
   font-size: 1.75em;
   text-align: center;
   margin-top:2%;
   letter-spacing: 0.1em;
+  width:30%;
+  margin-bottom:1%;
 }
-#about{
+#history > h3{
+  margin-bottom: 3%;
+}
+.about{
   width:70%;
   font-size: 1.85em;
-  text-align: center;
+  text-align: left;
   line-height: 1.5em;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
+  color:rgb(154, 153, 153)
 }
 #more {
   display: none;
 }
-/* .truncate {
-  display: -webkit-box;
-  -webkit-line-clamp: 8;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-}
-.toggle {
-border: none;
-background: transparent;
-cursor: pointer;
-}
-.inline-flex {
-  display: inline-flex;
-}
-.d-none {
-display: none;
-} */
+
 button{
   border:2px solid #E87C4A;
   border-radius: 2em;
   background:transparent;
-}
-.readmore {
-  color:#E87C4A;
   font-size:1em;
   border:2px solid #E87C4A;
   border-radius: .5em;
@@ -198,19 +214,505 @@ button{
   width:8em;
   text-align: center;
   padding: 15px 25px;
+  margin-bottom: 5%;
+}
+.readmore {
+  color:#367588;
+  font-size:1.75em;
+  border:2px solid #367588;
+  border-radius: .5em;
+  height:3.25em;
+  width:8.5em;
+  text-align: center;
+  padding: 15px 25px;
 }
 #address{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items:center;
+  background-color:#E87C4A;
+  color:white;
+  /* padding:0 20% 0 10%; */
+}
+#address h3{
+  color:white;
+  display: inline;
+}
+.pricingInfo{
+  color:#717171;
+}
+#pricing{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+#pricingHeading{
+  width:50%;
+}
+#pricing h3{
+  width:100%;
+}
+#pricing h2{
+  width:100%;
+  text-align: center;
+  color:#81c6b8;
+  font: 2.5em 'M PLUS Rounded 1c', sans-serif;
+  text-transform: uppercase;
+}
+.pricingInfo span{
+  font-size: 2em;
+  color:white;
+  position:relative;
+  bottom:2em;
+  text-transform: uppercase;
+  width:80%;
+  text-align: center;
+}
+/* #pricing h3:hover{
+  display:none;
+} */
+.active{
+  background-color:#E87C4A;
+  transition: 0.5s ease background-color;
+}
+#rules{
+  background-color: #E87C4A;
+  color:white;
+}
+#rules h3{
+  color:white;
+}
+.hide{
+  opacity:0;
+}
+ol{
+  font-size:1.25rem;
+  line-height: 1.8em;
+  letter-spacing: 0.1em;
+  margin: 2% 5% 5% 5%;
+  opacity:0.9;
+}
+.fade-in{
+  animation-name: FadeIn;
+  animation-duration: 3s;
+  transition-timing-function: linear;
+}
+
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes FadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/*Committee Section */
+.three{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+  margin:2% 0 3% 0;
+}
+#committee h3{
+  margin-bottom:3%;
+}
+.team{
+  /* width:12%; */
+  margin:0 0 1% 0;
+  padding:0;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.team img{
+  height:30em;
+  width:19em;
+  margin:0;
+  padding: 0;
+  box-shadow: #C0BBB7 1px 2px 4px;
+  border-radius: 0.5em;
+}
+.nameBox{
+  width:15em;
+  height:6.5em;
+  background-color:#367588;
+  color:white;
+  /* margin-left:3em; */
+  position:relative;
+  bottom:4em;
+  box-shadow: #C0BBB7 1px;
+  border-radius: 0.5em;
+  font-family: 'Handlee', sans-serif;
+}
+.team span{
+  display:block;
+  text-align: center;
+  padding-top:0.5em;
+  color:white;
+  /* text-transform: uppercase;
+  position:relative;
+  bottom:2em; */
+}
+.name{
+  font-size:1.1rem;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+.team span + span{
+  font-size:1rem;
+  margin:0;
+  /* opacity:.95; */
+  /* font-family:'M PLUS Rounded 1c', sans-serif; */
+}
+.blankBox{
+  height:30em;
+  width:19em;
+  margin:0;
+  padding: 0;
+  box-shadow: #C0BBB7 1px 2px 4px;
+  border-radius: 0.5em;
+  background-color:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notPictured{
+  color:#367588;
+}
+#contact{
+  background-color:#E87C4A;
+  color:white;
+}
+
+#contact > h3{
+  color:white;
+}
+/* #contact > h4{
+  font-size:5rem;
+}
+#contact > li{
+  list-style-type:none;
+}
+/* Row */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: stretch;
+  width:100%;
+  margin-bottom: 5%;
+}
+.form{
+  width: 50%;
+  margin: 5% 5% 3% 5%;
+  display: inline-block;
+}
+form {
+  width:100%;
+  margin:0;
+  /* opacity:0.95; */
+}
+form input{
+  width:47%;
+  margin-bottom: 0.5%;
+  height:3em;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  border-radius: 0.5em;
+  border-color:#C0BBB7;
+  border-width: 3px;
+}
+textarea{
+  width: 94.5%;
+  height:20em;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color:black;
+  border-radius: 0.5em;
+  border-color:#C0BBB7;
+  border-width: 3px;
+}
+.form li{
+  list-style-type: none;
+  display: inline;
+}
+.form li input{
+  width:20%;
+  margin:1% 1% 0 0;
+  background-color:#E87C4A;
+  color:white;
+  font-family:sans-serif; 
+  border-radius: 2em;
+}
+.contactInfo{
+  width:28%;
+  display:inline-block;
+  margin: 5% 5% 5% 0;
+}
+.contactBox{
+  margin-bottom:5%;
+  height:100%;
+}
+.contactBox h4{
+  font-size:1.5rem;
+  display: inline;
+  color:#367588;
+}
+.contactBox p{
+  font-size:1rem;
+  border-bottom: 2px solid white;
+  padding:3% 0 5% 0;
+}
+.contactBox p > a{
+  color:white;
+}
+.contactBox img{
+  width: 3.5em;
+  height:2.7em;
+  display: inline;
+  padding-right: 2%;
+}
+.pop-out{
+  transition: transform .5s;
+}
+.pop-out:hover
+{
+  -ms-transform: scale(1.25, 1.25);
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25);
+}
+footer{
+  background-color:#FBFBFD;
+  color:#367588;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:#E87C4A;
-  color:white;
+  width:100%;
 }
-#address h3{
-  color:white;
-  margin-top:10%;
+#copyright{
+  font-weight: bold;
+  font-size:1rem;
 }
-#map{
-  margin: 0.75% 0 3% 0;
+/*slideshow animations*/
+* {box-sizing: border-box;}
+.mySlides {display: none;}
+/* img {vertical-align: middle;} */
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 600px;
+  position: relative;
+  margin:3% 0 0 0;
 }
+.mySlides fade > img{
+  height:500px;
+}
+.mySlides img{
+  box-shadow: #bbb 1px 2px 4px;
+  border-radius: 0.5em;
+}
+/* The dots/bullets/indicators */
+.dot {
+  height: 1px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: none;
+  transition: background-color 0.6s ease;
+  position:relative;
+  bottom:4em;
+}
+
+.active1 {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name:fade;
+  animation-duration: .5s;
+}
+
+@keyframes fade {
+  from {opacity: .7} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+@media all and (max-width: 480px) {
+  #menuBG{
+    /* position:relative;
+    top:5em;
+    z-index: 1; */
+    /* background-color:#E87C4A; */
+    margin: 0;
+  }
+  div {
+    width: 35px;
+    height: 5px;
+    background-color:#E87C4A;
+    margin: 6px 0;
+  }
+  .sidenav {
+    width:0;
+    display: none;
+  }
+  .sidenav a {
+    font-size: 2em;
+  }
+  .home{
+    height:50px;
+  }
+  #dove{
+    width:2.75em;
+  }
+  #main {
+    padding: 0;
+    display:flex;
+    flex-flow: column;
+    width: 100%;
+    margin:0;
+  }
+  #home{
+    /* justify-content: center; */
+    background: #367588 no-repeat top left fixed;
+    background-size: cover;
+    height: 70em;
+    width:100%;
+    margin:0;
+    color:#dddbda;
+    text-transform: uppercase;
+    text-shadow:rgb(37, 37, 37) 1px 2px 4px;
+    letter-spacing: 1em;
+    /* word-spacing: 0.01em; */
+    opacity:0.9;
+  }
+  h3{
+    font-size: 2em;
+  }
+  .about{
+    width:90%;
+    font-size: 1.3em;
+    line-height: 1.5em;
+    margin-bottom: 1%;
+  }
+  button{
+    border:2px solid #E87C4A;
+    border-radius: 2em;
+    background:transparent;
+    font-size:1em;
+    border-radius: .5em;
+    height:3em;
+    width:8em;
+    text-align: center;
+    padding: 15px 25px;
+    margin-bottom: 5%;
+  }
+  .readmore {
+    color:#E87C4A;
+    font-size:1em;
+    border:2px solid #E87C4A;
+    border-radius: .5em;
+    height:3em;
+    width:8em;
+    text-align: center;
+    padding: 1% 2%;
+  }
+  .mapouter{
+    display:none;
+  }
+  .mapouter1{
+    display:contents;
+  }
+  #address h3{
+    display: none;
+  }
+  #pricing{
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height:50em;
+    width:100%;
+  }
+  #pricingHeading{
+    width:100%;
+    height:10em;
+  }
+  #plotPricing{
+    display:contents;
+  }
+
+  /* Slideshow container */
+  .slideshow-container{
+    display: none;
+  }
+/* .slideshow-container {
+  max-width: 450px;
+  height:300px;
+  position: relative;
+  margin:3% 0 0 0;
+}
+.mySlides fade > img{
+  height:450px;
+}
+.mySlides img{
+  box-shadow: #bbb 1px 2px 4px;
+  border-radius: 0.5em;
+} */
+  ol{
+    width:100%;
+    font-size:0.75rem;
+    line-height: 1.4em;
+    letter-spacing: 0.1em;
+    margin: 3% 10% 5% 10%;
+    opacity:0.9;
+  }
+}
+    /*make it a little accordion and then pull out
