--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
   margin: 0;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.1em;
-  background-color: #FBFBFD;
-  opacity:.95;
+  background-color: #F3F6F9;
+  opacity:.9;
 }
 ul{
   padding:0;
@@ -23,13 +23,13 @@ ul{
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  /* opacity:.6; */
-  background-color:#367588;
+  opacity:.6;
+  background-color:#A66D00;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 0;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.1em;
-  opacity: .95;
+  opacity: .9;
 }
 /* The navigation menu links */
 .sidenav a {
@@ -40,9 +40,9 @@ ul{
   color: white;
   display: block;
 }
-.home{
+.home1{
   height:100px;
-  margin:5% 0 10% 5%;
+  margin:5% 0 10% 0;
 }
 
 .sidenav a:nth-child(2){
@@ -56,18 +56,10 @@ ul{
   list-style-type: none;
 }
 #dove{
-  width:2.75em;
-  margin: 5% 0 10% 2%;
-  border-radius: 20em;
+  width:5.5em;
+  margin: 2% 0 2% 8%;
+  border-radius: 50em;
 }
-#tccLogo{
-  margin:0 0 5% 0;
-  width:9em;
-}
-/* .menuLinks:last-child{
-  /* border-bottom: white solid 1px; */
-/* }
-
 /* Style page content */
 #main {
   margin-left: 300px; /* Same as the width of the sidebar */
@@ -81,88 +73,18 @@ ul{
 }
 #home{
   display:flex;
-  flex-flow: column;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
-  background: url("sunny.jpg") no-repeat top left fixed;
-  background-color: rgb(247, 134, 48);
+  /* background: url("sunny.jpg") no-repeat top left fixed; */
+  background-color:#F3F6F9;
   background-size: cover;
-  height: 75em;
+  height: 60em;
   margin:0;
-  color:#dddbda;
-  text-transform: uppercase;
-  text-shadow:rgb(37, 37, 37) 1px 2px 4px;
-  letter-spacing: 1em;
-  /* word-spacing: 0.01em; */
   opacity:0.9;
-  /* animation: fadeIn linear 3s;
-  -webkit-animation: fadeIn linear 3s;
-  -moz-animation: fadeIn linear 3s;
-  -o-animation: fadeIn linear 3s;
-  -ms-animation: fadeIn linear 3s; */
-}
-/* @keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-} */
-#home > h2{
-  margin-top:45%;
-  font: 4em 'Grape Nuts', sans-serif;
-  width:100%;
-  color:#dddbda;
-
-}
-#home > h1{
-  font: 5em 'Handlee', sans-serif;
-  letter-spacing: 0.15em;
-}
-#home > h1::first-letter{
-  color:#E87C4A
-}
-#home > img{
-  width:70%;
-  margin-top:15%;
 }
 #logo{
   width:6%;
   border-radius: 5em;
-}
-#header > h1{
-  font-size: 8.5em;
-  text-align: center;
-  margin: 0;
-  letter-spacing: 0.4em;
-  color:rgb(253, 252, 251);
-  text-shadow: #070707 1px 2px;
-}
-#header > h2{
-  font-size: 6em;
-  text-align: center;
-  margin: 0;
-  letter-spacing: 0.12em;
-  color:rgb(255, 253, 253);
-  margin-bottom: 16%;
-  text-shadow: #0c0c0c 1px 2px;
 }
 #history, #pricing, #rules, #committee, #contact{
   display:flex;
@@ -171,7 +93,7 @@ ul{
   align-items: center;
 }
 h3{
-  color:#E87C4A;
+  color:#A66D00;
   font-size: 4em;
   text-align: center;
   margin:5% 0 0 0;
@@ -188,8 +110,12 @@ h2{
   width:30%;
   margin-bottom:1%;
 }
+#history{
+  opacity:.8;
+}
 #history > h3{
   margin-bottom: 3%;
+  color:#A66D00;
 }
 .about{
   width:70%;
@@ -197,29 +123,29 @@ h2{
   text-align: left;
   line-height: 1.5em;
   margin-bottom: 1%;
-  color:rgb(154, 153, 153)
+  color:#472f17;
+  font-family:Tahoma, sans-serif;
 }
 #more {
   display: none;
 }
 
 button{
-  border:2px solid #E87C4A;
+  border:2px solid #472f17;
   border-radius: 2em;
   background:transparent;
   font-size:1em;
-  border:2px solid #E87C4A;
-  border-radius: .5em;
   height:3em;
   width:8em;
   text-align: center;
   padding: 15px 25px;
   margin-bottom: 5%;
+  cursor: pointer;
 }
 .readmore {
-  color:#367588;
+  color:#472f17;
   font-size:1.75em;
-  border:2px solid #367588;
+  border:2px solid #472f17;
   border-radius: .5em;
   height:3.25em;
   width:8.5em;
@@ -228,20 +154,20 @@ button{
 }
 #address{
   display:flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items:center;
-  background-color:#E87C4A;
+  background-color:#472f17;
   color:white;
-  /* padding:0 20% 0 10%; */
+  padding:5%;
+  opacity: 0.9;
 }
 #address h3{
   color:white;
   display: inline;
 }
-.pricingInfo{
-  color:#717171;
-}
+/* .pricingInfo{
+  color:#d2b48c;
+} */
 #pricing{
   display:flex;
   flex-direction: row;
@@ -258,7 +184,7 @@ button{
 #pricing h2{
   width:100%;
   text-align: center;
-  color:#81c6b8;
+  color:#A66D00;
   font: 2.5em 'M PLUS Rounded 1c', sans-serif;
   text-transform: uppercase;
 }
@@ -271,19 +197,20 @@ button{
   width:80%;
   text-align: center;
 }
-/* #pricing h3:hover{
+.dots{
   display:none;
-} */
+  bottom:30em;
+}
 .active{
-  background-color:#E87C4A;
+  background-color:#472f17;
   transition: 0.5s ease background-color;
 }
 #rules{
-  background-color: #E87C4A;
+  background-color:#472f17;
   color:white;
 }
 #rules h3{
-  color:white;
+  color:#A66D00;
 }
 .hide{
   opacity:0;
@@ -294,6 +221,7 @@ ol{
   letter-spacing: 0.1em;
   margin: 2% 5% 5% 5%;
   opacity:0.9;
+  color:white;
 }
 .fade-in{
   animation-name: FadeIn;
@@ -350,7 +278,7 @@ ol{
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
+  width: 90%;
   align-items: center;
   justify-content: space-evenly;
   margin:2% 0 3% 0;
@@ -359,26 +287,26 @@ ol{
   margin-bottom:3%;
 }
 .team{
-  /* width:12%; */
+  width:25%;
   margin:0 0 1% 0;
   padding:0;
   display:flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 .team img{
-  height:30em;
-  width:19em;
+  height:36em;
+  width:25em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
-  border-radius: 0.5em;
+  border-radius: 0.1em;
 }
 .nameBox{
-  width:15em;
-  height:6.5em;
-  background-color:#367588;
+  width:16em;
+  height:8em;
+  background-color:#472f17;
   color:white;
   /* margin-left:3em; */
   position:relative;
@@ -407,27 +335,28 @@ ol{
   /* font-family:'M PLUS Rounded 1c', sans-serif; */
 }
 .blankBox{
-  height:30em;
+  height:6em;
   width:19em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
   border-radius: 0.5em;
-  background-color:white;
+  background-color:#F3F6F9;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content:center;
+  align-items: flex-start;
+  color:#367588
 }
-.notPictured{
-  color:#367588;
+.blankBox > span{
+  color:#472f17;
 }
 #contact{
-  background-color:#E87C4A;
+  background-color:#472f17;
   color:white;
 }
 
 #contact > h3{
-  color:white;
+  color:#A66D00;
 }
 /* #contact > h4{
   font-size:5rem;
@@ -443,7 +372,6 @@ ol{
   align-items: center;
   justify-content: stretch;
   width:100%;
-  margin-bottom: 5%;
 }
 .form{
   width: 50%;
@@ -480,10 +408,10 @@ textarea{
 .form li input{
   width:20%;
   margin:1% 1% 0 0;
-  background-color:#E87C4A;
+  background-color:#A66D00;
   color:white;
   font-family:sans-serif; 
-  border-radius: 2em;
+  border-radius: .5em;
 }
 .contactInfo{
   width:28%;
@@ -497,15 +425,17 @@ textarea{
 .contactBox h4{
   font-size:1.5rem;
   display: inline;
-  color:#367588;
+  color:#A66D00;
 }
 .contactBox p{
   font-size:1rem;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid #A66D00;
   padding:3% 0 5% 0;
+  color:white;
 }
 .contactBox p > a{
-  color:white;
+  color:#367588;
+  font-weight: bold;
 }
 .contactBox img{
   width: 3.5em;
@@ -523,8 +453,8 @@ textarea{
   transform: scale(1.25, 1.25);
 }
 footer{
-  background-color:#FBFBFD;
-  color:#367588;
+  background-color:#472f17;
+  color:#A66D00;
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -542,9 +472,9 @@ footer{
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 600px;
+  max-width: 550px;
   position: relative;
-  margin:3% 0 0 0;
+  margin:0;
 }
 .mySlides fade > img{
   height:500px;
@@ -555,15 +485,15 @@ footer{
 }
 /* The dots/bullets/indicators */
 .dot {
-  height: 1px;
-  width: 15px;
-  margin: 0 2px;
+  height: 0.1px;
+  width: 1px;
+  margin: 0 1px;
   background-color: #bbb;
   border-radius: 50%;
   display: none;
   transition: background-color 0.6s ease;
-  position:relative;
-  bottom:4em;
+  position:absolute;
+  top:10em;
 }
 
 .active1 {
@@ -687,6 +617,7 @@ footer{
   }
   #plotPricing{
     display:contents;
+    color:#A66D00;
   }
 
   /* Slideshow container */
