--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ h2{
   margin-bottom: 1%;
   color:#472f17;
   font-family:Tahoma, sans-serif;
+  opacity:0.95;
+  /* font-family: 'Raleway', sans-serif;
+  font-weight: 600; */
+}
+.about a{
+  color:#367588
 }
 #more {
   display: none;
@@ -165,6 +171,9 @@ button{
   color:white;
   display: inline;
 }
+.mapouter1{
+  display:none;
+}
 /* .pricingInfo{
   color:#d2b48c;
 } */
@@ -172,7 +181,7 @@ button{
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
 }
 #pricingHeading{
@@ -478,10 +487,10 @@ footer{
 }
 .mySlides fade > img{
   height:500px;
+  border-radius: 0;
 }
 .mySlides img{
-  box-shadow: #bbb 1px 2px 4px;
-  border-radius: 0.5em;
+  box-shadow: #bbb 1px 2px 2px;
 }
 /* The dots/bullets/indicators */
 .dot {
@@ -517,17 +526,22 @@ footer{
 }
 
 @media all and (max-width: 480px) {
+  body{
+    background-color: #F3F6F9;
+    height:auto;
+    overflow-x: hidden;
+  }
   #menuBG{
     /* position:relative;
     top:5em;
     z-index: 1; */
-    /* background-color:#E87C4A; */
+    background-color:#F3F6F9;
     margin: 0;
   }
   div {
     width: 35px;
     height: 5px;
-    background-color:#E87C4A;
+    background-color:#A66D00;
     margin: 6px 0;
   }
   .sidenav {
@@ -549,9 +563,9 @@ footer{
     flex-flow: column;
     width: 100%;
     margin:0;
+    height:50em;
   }
-  #home{
-    /* justify-content: center; */
+  /* #home{
     background: #367588 no-repeat top left fixed;
     background-size: cover;
     height: 70em;
@@ -561,9 +575,8 @@ footer{
     text-transform: uppercase;
     text-shadow:rgb(37, 37, 37) 1px 2px 4px;
     letter-spacing: 1em;
-    /* word-spacing: 0.01em; */
     opacity:0.9;
-  }
+  } */
   h3{
     font-size: 2em;
   }
@@ -574,7 +587,7 @@ footer{
     margin-bottom: 1%;
   }
   button{
-    border:2px solid #E87C4A;
+    border:2px solid #A66D00;
     border-radius: 2em;
     background:transparent;
     font-size:1em;
@@ -586,9 +599,9 @@ footer{
     margin-bottom: 5%;
   }
   .readmore {
-    color:#E87C4A;
+    color:#A66D00;
     font-size:1em;
-    border:2px solid #E87C4A;
+    border:2px solid #A66D00;
     border-radius: .5em;
     height:3em;
     width:8em;
@@ -608,42 +621,225 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    height:50em;
+    height:20em;
     width:100%;
   }
   #pricingHeading{
     width:100%;
-    height:10em;
+    height:20em;
+    color:white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #pricingHeading > h3{
+    font-size: 1.5rem;
+    color:white;
+  }
+  #pricingHeading > h2{
+    font-size: 1rem;
+    color:white;
+    
   }
   #plotPricing{
     display:contents;
-    color:#A66D00;
+    color:white;
+    font-size:3rem;
+    height:auto;
   }
 
   /* Slideshow container */
   .slideshow-container{
     display: none;
   }
-/* .slideshow-container {
-  max-width: 450px;
-  height:300px;
-  position: relative;
-  margin:3% 0 0 0;
-}
-.mySlides fade > img{
-  height:450px;
-}
-.mySlides img{
-  box-shadow: #bbb 1px 2px 4px;
-  border-radius: 0.5em;
-} */
-  ol{
+  #rules{
+    height:auto;
     width:100%;
+    padding:2% 5% 2% 10%;
+  }
+  ol{
+    display:contents;
+    width:80%;
     font-size:0.75rem;
     line-height: 1.4em;
     letter-spacing: 0.1em;
     margin: 3% 10% 5% 10%;
     opacity:0.9;
   }
+  /*Committee Section */
+  #committee{
+    display:none;
+  }
+  .three{
+    display:flex;
+    flex-direction: column;
+    /* flex-wrap: wrap; */
+    width: 90%;
+    align-items: center;
+    justify-content: center;
+    margin:2% 0;
+  }
+  #committee h3{
+    margin-bottom:3%;
+  }
+  .team{
+    /* width:100%; */
+    margin:0 0 1% 0;
+    padding:0;
+    display:hidden;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .team img{
+    height:25em;
+    width:20em;
+    margin:0;
+    padding: 0;
+    box-shadow: #C0BBB7 1px 2px 4px;
+    border-radius: 0.1em;
+  }
+  .nameBox{
+    width:16em;
+    height:6.5em;
+    background-color:#472f17;
+    color:white;
+    /* margin-left:3em; */
+    position:relative;
+    bottom:4em;
+    box-shadow: #C0BBB7 1px;
+    border-radius: 0.5em;
+    font-family: 'Handlee', sans-serif;
+  }
+  .team span{
+    display:block;
+    text-align: center;
+    padding-top:0.5em;
+    color:white;
+    /* text-transform: uppercase;
+    position:relative;
+    bottom:2em; */
+  }
+  .name{
+    font-size:1.1rem;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+  }
+  .team span + span{
+    font-size:1rem;
+    margin:0;
+    /* opacity:.95; */
+    /* font-family:'M PLUS Rounded 1c', sans-serif; */
+    }
+  .blankBox{
+    height:6em;
+    width:19em;
+    margin:0;
+    padding: 0;
+    box-shadow: #C0BBB7 1px 2px 4px;
+    border-radius: 0.5em;
+    background-color:#F3F6F9;
+    display: flex;
+    justify-content:center;
+    align-items: flex-start;
+    color:#367588
+  }
+  .blankBox > span{
+    color:#472f17;
+  }
+#contact{
+  background-color:#472f17;
+  color:white;
+  width:100%;
+  height:60em;
+}
+
+#contact > h3{
+  color:#A66D00;
+}
+/* #contact > h4{
+  font-size:5rem;
+}
+#contact > li{
+  list-style-type:none;
+}
+/* Row */
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: stretch;
+  width:100%;
+  height:auto;
+}
+.form{
+  display:none;
+}
+.contactInfo{
+  width:100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2% 0;
+  height:8em;
+
+}
+.contactBox{
+  width: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.contactBox > section{
+  width: 90%;
+  margin:5% 0;
+  display:flex;
+  justify-content: center;
+}
+.contactBox h4{
+  font-size:1.5rem;
+  display: none;
+  color:#A66D00;
+}
+.contactBox p{
+  font-size:1rem;
+  border-bottom: none;
+  padding:3% 0 5% 0;
+  color:white;
+  font-family:Tahoma, sans-serif;
+}
+.contactBox p > a{
+  color:#367588;
+  font-weight: bold;
+}
+.contactBox img{
+  width: 2em;
+  height:1.8em;
+  display: inline;
+  padding-right: 2%;
+}
+.pop-out{
+  transition: transform .5s;
+}
+.pop-out:hover
+{
+  -ms-transform: scale(1.25, 1.25);
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25);
+}
+footer{
+  background-color:#472f17;
+  color:#A66D00;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+}
+#copyright{
+  font-weight: bold;
+  font-size:1rem;
+}
 }
     /*make it a little accordion and then pull out
