--- a/style.css
+++ b/style.css
@@ -82,6 +82,9 @@ ul{
   margin:0;
   opacity:0.9;
 }
+/* #homeLogo{
+  display:none;
+} */
 #logo{
   width:6%;
   border-radius: 5em;
@@ -538,7 +541,7 @@ footer{
     background-color:#F3F6F9;
     margin: 0;
   }
-  div {
+  .navMenu{
     width: 35px;
     height: 5px;
     background-color:#A66D00;
@@ -565,18 +568,18 @@ footer{
     margin:0;
     height:50em;
   }
-  /* #home{
-    background: #367588 no-repeat top left fixed;
-    background-size: cover;
-    height: 70em;
+  #home{
+    height:50em;
+  }
+#homeLogo{
     width:100%;
-    margin:0;
-    color:#dddbda;
-    text-transform: uppercase;
-    text-shadow:rgb(37, 37, 37) 1px 2px 4px;
-    letter-spacing: 1em;
-    opacity:0.9;
-  } */
+  }
+  video{
+    display:none;
+  }
+  #home{
+    height:50em;
+  }
   h3{
     font-size: 2em;
   }
@@ -608,6 +611,9 @@ footer{
     text-align: center;
     padding: 1% 2%;
   }
+  #address{
+    background-color: #F3F6F9;
+  }
   .mapouter{
     display:none;
   }
@@ -626,8 +632,8 @@ footer{
   }
   #pricingHeading{
     width:100%;
-    height:20em;
-    color:white;
+    height:12em;
+    color:#A66D00;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -635,11 +641,11 @@ footer{
   }
   #pricingHeading > h3{
     font-size: 1.5rem;
-    color:white;
+    color:#A66D00;
   }
   #pricingHeading > h2{
     font-size: 1rem;
-    color:white;
+    color:#A66D00;
     
   }
   #plotPricing{
@@ -656,7 +662,7 @@ footer{
   #rules{
     height:auto;
     width:100%;
-    padding:2% 5% 2% 10%;
+    padding:2% 5% 4% 10%;
   }
   ol{
     display:contents;
@@ -748,10 +754,10 @@ footer{
     color:#472f17;
   }
 #contact{
-  background-color:#472f17;
+  background-color:#A66D00;
   color:white;
   width:100%;
-  height:60em;
+  height:8em;
 }
 
 #contact > h3{
@@ -782,7 +788,7 @@ footer{
   align-items: center;
   justify-content: center;
   margin: 2% 0;
-  height:8em;
+  height:5em;
 
 }
 .contactBox{
@@ -803,7 +809,7 @@ footer{
   color:#A66D00;
 }
 .contactBox p{
-  font-size:1rem;
+  font-size:0.75rem;
   border-bottom: none;
   padding:3% 0 5% 0;
   color:white;
@@ -829,7 +835,7 @@ footer{
   transform: scale(1.25, 1.25);
 }
 footer{
-  background-color:#472f17;
+  background-color:#F3F6F9;
   color:#A66D00;
   display:flex;
   flex-direction: column;
