--- a/style.css
+++ b/style.css
@@ -26,13 +26,12 @@ ul{
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  opacity:.6;
-  background-color:#A66D00;
+  background-color:#0B5351;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 0;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.1em;
-  opacity: .9;
+  /* opacity: .9; */
 }
 /* The navigation menu links */
 .sidenav a {
@@ -53,7 +52,7 @@ ul{
 }
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #eb9871;
+  color:#A66D00;
 }
 .sidenav li{
   list-style-type: none;
@@ -66,26 +65,29 @@ ul{
 /* Style page content */
 #main {
   margin-left: 300px; /* Same as the width of the sidebar */
-  padding: 0;
+  padding: 0;;
 }
 #home{
   display:flex;
   justify-content: center;
-  align-items: center;
+  align-items:center;
   background-color:#F3F6F9;
-  background-size: cover;
-  height: 60em;
+  height: 72em;
   margin:0;
-  opacity:0.9;
+  /* opacity:1; */
+  background: url(images/IMG_2800.JPEG) no-repeat fixed;
+  background-size: cover;
+  background-position: top 40% center;
 }
 #homeLogo{
-  display:none;
+  width:80%;
+  /* margin-bottom: 36%; */
 }
 #logo{
   width:6%;
   border-radius: 5em;
 }
-#history, #pricing, #rules, #committee, #contact{
+#pricing, #rules, #committee, #contact{
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -99,6 +101,7 @@ h3{
   text-transform: uppercase;
   letter-spacing: .05em;
   width:40%;
+  font-weight: bolder;
 }
 h2{
   color:rgb(233, 231, 231);
@@ -110,21 +113,33 @@ h2{
   margin-bottom:1%;
 }
 #history{
-  opacity:.8;
+  /* opacity:.8; */
+  padding:0 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #history > h3{
-  margin-bottom: 3%;
+  margin: 3% 0 2% 0;
   color:#A66D00;
 }
+#history img{
+  width:50em;
+  height:35em;
+  border-radius: 0.5em;
+  float:right;
+  margin: 0 0 0 5%;
+}
 .about{
-  width:70%;
+  width:100%;
   font-size: 1.85em;
-  text-align: left;
+  text-align: center;
   line-height: 1.5em;
-  margin-bottom: 1%;
-  color:#472f17;
-  font-family:Tahoma, sans-serif;
-  opacity:0.95;
+  margin:0;
+  color:#092327;
+  font-family:sans-serif;
+  /* opacity:0.95; */
   /* font-family: 'Raleway', sans-serif;
   font-weight: 600; */
 }
@@ -136,24 +151,31 @@ h2{
 }
 
 button{
-  border:2px solid #472f17;
-  border-radius: 2em;
+  /* border:2px solid #0B5351; */
+  /* border-radius: 2em; */
+  display: inline;
   background:transparent;
   font-size:1em;
   height:3em;
   width:8em;
   text-align: center;
   padding: 15px 25px;
-  margin-bottom: 5%;
+  margin:2% 0 5% 0;
   cursor: pointer;
+  border:none;
+}
+button:hover{
+  background-color: #A66D00;
+  border-color: #A66D00;
 }
 .readmore {
-  color:#472f17;
+  color:white;
   font-size:1.75em;
-  border:2px solid #472f17;
+  border:2px solid #0B5351;
+  background-color: #0B5351;
   border-radius: .5em;
-  height:3.25em;
-  width:8.5em;
+  height:3em;
+  width:8.25em;
   text-align: center;
   padding: 15px 25px;
 }
@@ -161,7 +183,7 @@ button{
   display:flex;
   justify-content: center;
   align-items:center;
-  background-color:#472f17;
+  background-color:#A66D00;
   color:white;
   padding:5%;
   opacity: 0.9;
@@ -210,26 +232,33 @@ button{
   bottom:30em;
 }
 .active{
-  background-color:#472f17;
+  background-color:#A66D00;
   transition: 0.5s ease background-color;
 }
 #rules{
-  background-color:#472f17;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color:#A66D00;
   color:white;
+  height:73em;
+  flex-wrap: wrap;
 }
 #rules h3{
-  color:#A66D00;
+  color:white;
 }
 .hide{
   opacity:0;
 }
 ol{
-  font-size:1.25rem;
-  line-height: 1.8em;
+  font-size:1.1rem;
+  line-height: 1.2em;
   letter-spacing: 0.1em;
   margin: 2% 5% 5% 5%;
   opacity:0.9;
   color:white;
+  float:left;
 }
 .fade-in{
   animation-name: FadeIn;
@@ -289,10 +318,10 @@ ol{
   width: 90%;
   align-items: center;
   justify-content: space-evenly;
-  margin:2% 0 3% 0;
+  margin:0;
 }
 #committee h3{
-  margin-bottom:3%;
+  margin:3% 0 2% 0;
 }
 .team{
   width:25%;
@@ -300,47 +329,62 @@ ol{
   padding:0;
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 .team img{
-  height:36em;
-  width:25em;
+  height:38em;
+  width:27.4em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
   border-radius: 0.1em;
 }
+.team:first-child{
+  margin-bottom:0;
+  height:458px;
+}
 .nameBox{
   width:16em;
-  height:8em;
-  background-color:#472f17;
-  color:white;
+  height:6em;
+  background-color:white;
+  color:#0B5351;
+  /* text-shadow: white 1px 2px 1px; */
   /* margin-left:3em; */
+  border:white 2px solid;
   position:relative;
+  bottom:2em;
+  /* box-shadow: #C0BBB7 1px; */
+  /* border-radius: 0.5em; */
+  font-family: 'Raleway', sans-serif;
+}
+.nameBox:first-child{
   bottom:4em;
-  box-shadow: #C0BBB7 1px;
-  border-radius: 0.5em;
-  font-family: 'Handlee', sans-serif;
 }
 .team span{
   display:block;
   text-align: center;
   padding-top:0.5em;
-  color:white;
+  /* color:white; */
   /* text-transform: uppercase;
   position:relative;
   bottom:2em; */
 }
 .name{
   font-size:1.1rem;
-  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-family: 'Raleway' sans-serif;
+  font-weight: bold;
 }
 .team span + span{
   font-size:1rem;
   margin:0;
+  font-weight: bold;
   /* opacity:.95; */
   /* font-family:'M PLUS Rounded 1c', sans-serif; */
+}
+.notPictured{
+  font-size: 1.25rem;
+  margin:0;
 }
 .blankBox{
   height:6em;
@@ -359,12 +403,12 @@ ol{
   color:#472f17;
 }
 #contact{
-  background-color:#472f17;
+  background-color:#A66D00;
   color:white;
 }
 
 #contact > h3{
-  color:#A66D00;
+  color:white;
 }
 /* #contact > h4{
   font-size:5rem;
@@ -381,6 +425,11 @@ ol{
   justify-content: stretch;
   width:100%;
 }
+h5{
+  font-size: 1.75rem;
+  color:#F3F6F9;
+  margin-bottom: 2%;
+}
 .form{
   width: 50%;
   margin: 5% 5% 3% 5%;
@@ -395,7 +444,7 @@ form input{
   width:47%;
   margin-bottom: 0.5%;
   height:3em;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:sans-serif;
   border-radius: 0.5em;
   border-color:#C0BBB7;
   border-width: 3px;
@@ -403,7 +452,7 @@ form input{
 textarea{
   width: 94.5%;
   height:20em;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:sans-serif;
   color:black;
   border-radius: 0.5em;
   border-color:#C0BBB7;
@@ -416,10 +465,17 @@ textarea{
 .form li input{
   width:20%;
   margin:1% 1% 0 0;
-  background-color:#A66D00;
+  background-color:#0B5351;
   color:white;
   font-family:sans-serif; 
   border-radius: .5em;
+  border:2px double #bbb;
+  cursor: pointer;
+}
+.form li input:hover{
+  background-color: white;
+  color:#A66D00;
+  border-color: white;
 }
 .contactInfo{
   width:28%;
@@ -433,16 +489,16 @@ textarea{
 .contactBox h4{
   font-size:1.5rem;
   display: inline;
-  color:#A66D00;
+  color:white;
 }
 .contactBox p{
   font-size:1rem;
-  border-bottom: 2px solid #A66D00;
+  border-bottom: 2px solid #F3F6F9;
   padding:3% 0 5% 0;
   color:white;
 }
 .contactBox p > a{
-  color:#367588;
+  color:#0B5351;
   font-weight: bold;
 }
 .contactBox img{
@@ -461,7 +517,7 @@ textarea{
   transform: scale(1.25, 1.25);
 }
 footer{
-  background-color:#472f17;
+  background-color:#F3F6F9;
   color:#A66D00;
   display:flex;
   flex-direction: column;
