added modals and changed structure of page

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ ul{
 }
 #home{
   display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items:center;
   background-color:#0B5351;
@@ -79,9 +80,54 @@ ul{
   background-size:cover;
   background-position: top 40% center;
 }
-#homeLogo{
-  width:80%;
-  /* margin-bottom: 36%; */
+#mainLogo{
+  font-size: 8em;
+  color:#F3F6F9;
+  opacity:0.9;
+  font-family:'M Plus', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin:0;
+  overflow: hidden;
+  animation:appear 4s;
+}
+@keyframes appear{
+  0%{opacity: 0;}
+  20%{opacity: 1;}
+  80%{opacity: 1;}
+  100%{opacity: 0;}
+}
+#mainLogo::first-letter{
+  color:#A66D00;
+}
+#subLogo{
+  animation:reveal 4s;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+#mainLogo2{
+  font-size: 5em;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  margin: 0 0 0 0;
+  animation:slide 8s;
+}
+@keyframes reveal{
+  0%{opacity: 0; width: 0px;}
+  20%{opacity: 1; width: 0px;}
+  30%{width: 655px;}
+  80%{opacity: 1;}
+  100%{opacity: 0; width: 655px;}
+}
+@keyframes slide{
+  0%{margin-left:-800px;}
+  20%{margin-left:-800px;}
+  35%{margin-left:0px;}
+100%{margin-left:0px;}
 }
 #logo{
   width:6%;
@@ -94,13 +140,14 @@ ul{
   align-items: center;
 }
 h3{
-  color:#A66D00;
-  font-size: 4em;
+  color:white;
+  font-size: 2rem;
+  text-shadow: #A66D00 2px 4px 4px;
   text-align: center;
   margin:5% 0 0 0;
   text-transform: uppercase;
   letter-spacing: .05em;
-  width:40%;
+  width:100%;
   font-weight: bolder;
 }
 h2{
@@ -120,9 +167,18 @@ h2{
   justify-content: center;
   align-items: center;
 }
-#history > h3{
-  margin: 3% 0 2% 0;
+#aboutHeading{
+  margin: 7% 0 2% 0;
   color:#A66D00;
+  font-size:2rem;
+  text-shadow:none;
+}
+#aboutHeading::first-letter, #committeeHeading::first-letter{
+  color:#0B5351
+}
+span{
+  font-size:2rem;
+  margin: 6% 0 3% 0;
 }
 #history img{
   width:50em;
@@ -137,12 +193,12 @@ h2{
 }
 .about{
   width:100%;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-align:left;
   line-height: 1.5em;
   margin:1% 0 0 0;
   color:#092327;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
 }
 .about a{
   color:#367588
@@ -161,7 +217,7 @@ button{
   width:8em;
   text-align: center;
   padding: 15px 25px;
-  margin:2% 0 5% 0;
+  margin:4% 0 5% 0;
   cursor: pointer;
   border:none;
 }
@@ -196,15 +252,26 @@ button:hover{
 .mapouter1{
   display:none;
 }
-/* .pricingInfo{
-  color:#d2b48c;
-} */
-#pricing{
-  display:flex;
+#quickLinks{
+  display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
+  height:59em;
+  margin-bottom: -14em;
+}
+.linkOut{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0;
+}
+.linkOut img{
+  max-width:407px;
+  height:450px;
+  margin:0;
+  
 }
 #pricingHeading{
   width:50%;
@@ -228,27 +295,122 @@ button:hover{
   width:80%;
   text-align: center;
 }
-.dots{
-  display:none;
-  bottom:30em;
+.details{
+  position:relative;
+  bottom:14em;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  background-image: linear-gradient(to bottom, transparent, #A66D00);
+}
+.detailHeading{
+  color:white;
+  font-size: 2rem;
+  text-shadow: #A66D00 2px 4px 4px;
+  text-align: center;
+  margin:0 0 5% 0;
+  text-transform: uppercase;
+  letter-spacing: .05em;
+  width:100%;
+  font-weight: bolder;
+}
+.detailHeading::first-letter{
+  color:#0B5351;
+  /* text-shadow:#092327 2px 4px 4px; */
+  font-size:2.5rem;
+}
+.buttons{
+  width:6em;
+  background-color:#F3F6F9;
+  color:#A66D00;
+  height:2.2em;
+  font-size: 1.25rem;
+  opacity:.92;
+  border-radius: 0.2em;
+  cursor: pointer;
+  text-align: center;
+  padding: 2%;
+}
+.buttons:hover{
+  background-color: #A66D00;
+  color:#F3F6F9;
 }
 .active{
   background-color:#A66D00;
   transition: 0.5s ease background-color;
 }
-#rules{
+
+.overlay{
+  display:none;
+  position:fixed;
+  top: 0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.5);
+}
+.close-modal-btn{
+  margin:0;
+  color:#F3F6F9;
+  opacity:0.7;
+  text-transform: uppercase;
+  
+}
+.modal{
+  max-width:750px;
+  height:400px;
+  margin:auto;
+  background-color:#0B5351;
+  position:absolute;
+  top: 0;
+  bottom:0;
+  left:4em;
+  right:0;
+}
+
+#overlayRules{
+  display:none;
+  position:fixed;
+  top: 0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.5);
+}
+#close-modal-btn{
+  margin:0;
+  color:#F3F6F9;
+  opacity:0.7;
+  text-transform: uppercase;
+  
+}
+#modalRules{
+  max-width:1300px;
+  height:700px;
+  margin:auto;
+  background-color:#0B5351;
+  position:absolute;
+  top: 0;
+  bottom:0;
+  left:0;
+  right:0;
+}
+#heading{
   display:flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color:#A66D00;
-  color:white;
-  height:77em;
-  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#rules h3{
-  color:white;
+#heading > h3{
+  margin:2% 0 0 2%;
 }
+
+#rules{
+  font-size:2.01rem;
+} 
 .hide{
   opacity:0;
 }
@@ -312,21 +474,32 @@ ol{
   }
 }
 /*Committee Section */
+/* #committee{
+  position: absolute;
+  bottom:7;
+} */
 .three{
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 90%;
+  width: 85%;
   align-items: center;
   justify-content: space-evenly;
-  margin:0 0 3% 0;
+  margin:0 0 6% 0;
 }
-#committee h3{
-  margin:5% 0 0 0;
+#committeeHeading{
+  margin:2% 0 2% 0;
+  color:#A66D00;
+  font-size:2.5rem;
+  text-shadow:none;
+}
+#committee > span{
+  font-size:2rem;
+  margin: 4% 0 0 0;
 }
 .team{
-  width:25%;
-  margin:0;
+  width:33%;
+  margin:-1% 0 0 0;
   padding:0;
   display:flex;
   flex-direction: column;
@@ -335,14 +508,9 @@ ol{
   /* position: relative; */
   /* bottom:6em; */
 }
-.team:last-child, .team:nth-child(5){
-  /* position: relative; */
-  /* bottom:10em; */
-}
-
 .team img{
-  height:24em;
-  width:24em;
+  height:27em;
+  width:27em;
   margin:0;
   padding: 0;
   box-shadow: #C0BBB7 1px 2px 4px;
@@ -414,13 +582,17 @@ ol{
   list-style-type:none;
 }
 /* Row */
+#contact{
+  padding-bottom: 1%;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
   box-sizing: border-box;
   align-items: center;
   justify-content: stretch;
-  width:100%;
+  width:90%;
+  opacity: 0.9;
 }
 h5{
   font-size: 1.75rem;
@@ -428,8 +600,8 @@ h5{
   margin-bottom: 2%;
 }
 .form{
-  width: 50%;
-  margin: 5% 5% 3% 5%;
+  width: 45%;
+  margin: 5% 5% -3% 5%;
   display: inline-block;
 }
 form {
@@ -441,7 +613,7 @@ form input{
   width:47%;
   margin-bottom: 0.5%;
   height:2.5em;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:'Handlee', sans-serif;
   border-radius: 0.5em;
   border-color:#C0BBB7;
   border-width: 3px;
@@ -449,26 +621,28 @@ form input{
 }
 textarea{
   width: 94.5%;
-  height:14em;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height:10em;
+  font-family:'Handlee', sans-serif;
   color:black;
   border-radius: 0.5em;
   border-color:#C0BBB7;
   border-width: 3px;
   font-size: 1.15rem;
+  margin-bottom:0;
 }
 .form li{
   list-style-type: none;
   display: inline;
+  margin:0 0 0 10%;
 }
 .form li input{
   width:20%;
-  margin:0 1% 0 0;
-  background-color:#0B5351;
+  margin:0;
+  background-color:#A66D00;
   color:white;
   font:1.05rem 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: .5em;
-  border:2px double #bbb;
+  border:2px double #F3F6F9;
   cursor: pointer;
 }
 .form li input:hover{
@@ -477,9 +651,9 @@ textarea{
   border-color: white;
 }
 .contactInfo{
-  width:28%;
+  width:35%;
   display:inline-block;
-  margin: 3% 5% 5% 0;
+  margin: 3% 5% -3% 0;
 }
 .contactBox{
   margin-bottom:5%;
@@ -516,8 +690,8 @@ textarea{
   transform: scale(1.25, 1.25);
 }
 footer{
-  background-color:#F3F6F9;
-  color:#A66D00;
+  background-color:#A66D00;
+  color:#F3F6F9;
   display:flex;
   flex-direction: column;
   justify-content: center;
@@ -527,6 +701,7 @@ footer{
 #copyright{
   font-weight: bold;
   font-size:1rem;
+  /* margin:0; */
 }
 /*slideshow animations*/
 * {box-sizing: border-box;}
