--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ h2{
 }
 #history{
   /* opacity:.8; */
-  padding:0 12% 0 15%;
+  padding:0 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -332,7 +332,7 @@ span{
   text-align:left;
   line-height: 1.5em;
   margin:2% 0 0 0;
-  color:#092327;
+  color:black;
   font-weight: bold;
 }
 .about > span{
